Phase 8.1: PixiJS foundation & sprite system infrastructure
🚧 SEPARATE DEVELOPMENT TRACK - Zero production impact

This commit establishes the complete foundation for the new
PixiJS-based character rendering system (Phase 8.1: Foundations).

Built entirely in isolation at /character-system-v2/ - will not
affect beta testers or production until Phase 8.4 is complete.

## Dependencies Installed
- pixi.js@8.14.0 - WebGL-accelerated 2D rendering
- @pixi/react@8.0.3 - React integration for PixiJS

## Type System (lib/character-system-v2/types/)
- SpriteMeta interface - Complete sprite metadata schema
- AnimKey type - 8 animation states (idle, walk, attack, etc.)
- ColorMap interface - Palette swapping support
- SpriteLayer interface - Modular layer composition
- CharacterSprite interface - Complete character definition
- AnimationState interface - Animation controller state
- TextureAtlas interface - Multi-sprite optimization
- SpriteLoadState type - Loading state management

## PixiJS Components (lib/character-system-v2/pixi/)
- PixiStage.tsx - React wrapper for PixiJS Application
  * Configures for pixel-perfect rendering
  * Round pixels enabled
  * Nearest-neighbor filtering
  * WebGL with Canvas fallback
  * Auto-cleanup on unmount
- SpriteRenderer.tsx - Animated sprite component
  * Frame-based animation (not transform-based)
  * Animation state management
  * Ticker-based updates
  * Texture swapping per frame

## Sprite Utilities (lib/character-system-v2/sprites/)
- sprite-loader.ts - Asset loading & caching
  * Load sprite sheets + metadata
  * Validation & error handling
  * Frame texture extraction
  * Cache key generation
  * PixiJS Assets integration
- animation-controller.ts - Animation state machine
  * Create/update animation states
  * Frame timing (FPS-based)
  * Loop/one-shot support
  * Animation transitions
  * Progress tracking

## Test Environment (app/character-system-v2/test/)
- Isolated test page at /character-system-v2/test
- PixiJS stage with 

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "test:verify": "tsx tests/simulation/verify-simulation.ts"
   },
   "dependencies": {
+    "@pixi/react": "^8.0.3",
     "@prisma/client": "^6.17.1",
     "bcryptjs": "^3.0.2",
     "canvas-confetti": "^1.9.3",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.4",
+    "pixi.js": "^8.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^3.2.1"
